# backend/go/model_episode_simple.go
@@ -1,0 +1,41 @@
+/*
+ * Podcast Recommender app
+ *
+ * This is the API for the podcast recommender app. The API used to get all data is Listen Notes (https://www.listennotes.com/api/)
+ *
+ * API version: 1.0.0
+ * Contact: joren.sjongers@icloud.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type EpisodeSimple struct {
+
+	MaybeAudioInvalid bool `json:"maybe_audio_invalid,omitempty"`
+
+	PubDateMs int32 `json:"pub_date_ms,omitempty"`
+
+	Audio string `json:"audio,omitempty"`
+
+	ListennotesEditUrl string `json:"listennotes_edit_url,omitempty"`
+
+	Image string `json:"image,omitempty"`
+
+	Thumbnail string `json:"thumbnail,omitempty"`
+
+	Description string `json:"description,omitempty"`
+
+	Title string `json:"title,omitempty"`
+
+	ExplicitContent bool `json:"explicit_content,omitempty"`
+
+	ListennotesUrl string `json:"listennotes_url,omitempty"`
+
+	AudioLengthSec int32 `json:"audio_length_sec,omitempty"`
+
+	Id string `json:"id,omitempty"`
+
+	Link string `json:"link,omitempty"`
+
+	Podcast *EpisodeSimplePodcast `json:"podcast,omitempty"`
+}
